--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "@types/node": "^18.13.0",
         "@types/node-fetch": "^2.6.2",
         "ts-node": "^10.9.1",
-        "typescript": "5.0.0-dev.20230209"
+        "typescript": "5.0.0-beta"
     },
     "optionalDependencies": {
         "node-fetch": "^2.6.9"
