--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
         "allowSyntheticDefaultImports": true,
         "strict": true
     },
-    "include": ["src/", "src/.sample.ts"]
+    "include": ["src/"]
 }
