--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
     "name": "@createsend/client",
     "version": "0.0.1",
-    "type": "module",
+    "scripts": {
+        "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
+    },
+    "module": "./dist/esm/index.js",
+    "main": "./dist/cjs/index.js",
     "devDependencies": {
         "@types/node": "^18.13.0",
         "@types/node-fetch": "^2.6.2",
