--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@createsend/client",
-    "version": "0.0.1",
+    "version": "0.0.1-c",
     "scripts": {
         "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
     },
