--- a/samples/esm/package.json
+++ b/samples/esm/package.json
@@ -4,6 +4,6 @@
         "node": ">=18"
     },
     "dependencies": {
-        "@createsend/client": "../createsend-client-v0.0.1-a.tgz"
+        "@createsend/client": "../createsend-client-v0.0.1-f.tgz"
     }
 }
