--- a/samples/node-fetch/package.json
+++ b/samples/node-fetch/package.json
@@ -3,7 +3,7 @@
         "node": ">=16 <18"
     },
     "dependencies": {
-        "@createsend/client": "../createsend-client-v0.0.1-a.tgz",
+        "@createsend/client": "../createsend-client-v0.0.1-f.tgz",
         "node-fetch": "^2.6.9"
     }
 }
