--- a/samples/ts/package.json
+++ b/samples/ts/package.json
@@ -6,7 +6,7 @@
         "build": "tsc"
     },
     "dependencies": {
-        "@createsend/client": "../createsend-client-v0.0.1-f.tgz"
+        "@createsend/client": "../createsend-client-v0.0.2.tgz"
     },
     "devDependencies": {
         "typescript": "^4.9.5"
